--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,7 @@ Assets/Plugins/Source/Editor/obj/
 Assets/Plugins/Android/*
 *_BackUpThisFolder_ButDontShipItWithYourGame*
 *_BurstDebugInformation_DoNotShip*
+
+# Ignore temporaries from GameCI
+/[Aa]rtifacts/
+/[Cc]odeCoverage/
