Updated git ignore to ignore changes made to json files (and meta files) inside the Assets/StreamingAssets/EOS/ directory.

--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,6 @@ Assets/Plugins/Source/Editor/obj/
 Assets/Plugins/Android/*
 *_BackUpThisFolder_ButDontShipItWithYourGame*
 *_BurstDebugInformation_DoNotShip*
+
+# Ignore changes made to any config files for EOS plugin
+Assets/StreamingAssets/EOS/*.json*
